<resources>
    <string name="app_name">rather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting_page">SettingPage</string>
    <string name="title_activity_settings">settings</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="set_app_color">Set App Color</string>
    <string name="set_text_size">Set Text Size</string>
    <string name="bold_text">Bold Text</string>
    <string name="back">Back</string>
    <string name="change_font_size">Change Font Size</string>
</resources>
